# walking-g1

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  LICENSE  deploy_real.py  instructions.txt  main.cpp  requirements.txt  run.sh
configs/: g1.yaml
libtorch/: build-hash  build-version
libtorch/include/ATen/: CUDAFunctions_inl.h  CompositeExplicitAutogradFunctions_inl.h  Functions.h  MetaFunctions_inl.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
libtorch/include/ATen/core/: TensorBody.h  aten_interned_strings.h  enum_tag.h
libtorch/include/ATen/ops/: _async_error.h  _async_error_compositeexplicitautograd_dispatch.h  _async_error_meta_dispatch.h  _async_error_native.h  _async_error_ops.h  _scaled_grouped_mm_v2.h  _scaled_grouped_mm_v2_cuda_dispatch.h  _scaled_grouped_mm_v2_native.h  _scaled_grouped_mm_v2_ops.h  _scaled_mm_v2.h  _scaled_mm_v2_cuda_dispatch.h  _scaled_mm_v2_native.h  _scaled_mm_v2_ops.h  exp_native.h  rand_like.h  rand_like_compositeexplicitautograd_dispatch.h  rand_like_native.h  rand_like_ops.h  randint_like.h  randint_like_compositeexplicitautograd_dispatch.h  randint_like_native.h  randint_like_ops.h  randn_like.h  randn_like_compositeexplicitautograd_dispatch.h  randn_like_compositeimplicitautogradnestedtensor_dispatch.h  randn_like_native.h  randn_like_ops.h  tril.h  tril_compositeexplicitautogradnonfunctional_dispatch.h  tril_cpu_dispatch.h  tril_cuda_dispatch.h  tril_meta_dispatch.h  tril_ops.h  triu.h  triu_compositeexplicitautogradnonfunctional_dispatch.h  (+4 more)
libtorch/lib/: libgomp-98b21ff3.so.1
src/: main.cpp
(+2 files in other folders)
